--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-overview/template/price-product-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-overview/template/price-product-overview.html
@@ -1,4 +1,4 @@
-<div class="overview-right-body" *ngIf="priceProductVM">
+<div class="overview-right-body th-padding-top" *ngIf="priceProductVM">
 	<div>
 		<kbd>{{ 'Selected' | translate }}</kbd>
 	</div>
