--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/intro/template/wizard-basic-info-intro.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/intro/template/wizard-basic-info-intro.html
@@ -4,8 +4,8 @@
 	</div>
 
 </div>
-<div class="row card-body page-info">
-	<div class='col-xs-9 col-md-9'>
+<div class="row card-body">
+	<div class="col-xs-9 col-md-9 th-padding-top">
 		<div class="col-xs-9 col-md-9">
 			<p>{{ '[Wizard Step 0] Welcome Message' | translate }}</p>
 		</div>
