--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/payments-policies/template/wizard-basic-info-payments-policies.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/payments-policies/template/wizard-basic-info-payments-policies.html
@@ -12,7 +12,7 @@
 	</div>
 </div>
 
-<div class="row card-body page-info">
+<div class="row card-body">
 	<div class="col-xs-9 col-md-9 basic-info-container">
 		<basic-info-payments-policies-edit></basic-info-payments-policies-edit>
 	</div>
