--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/property-details/template/wizard-basic-info-property-details.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/property-details/template/wizard-basic-info-property-details.html
@@ -13,7 +13,7 @@
 	</div>
 </div>
 
-<div class="row card-body page-info">
+<div class="row card-body">
 	<div class="col-xs-9 col-md-9 basic-info-container">
 		<basic-info-property-details-edit></basic-info-property-details-edit>
 	</div>
