--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-overview/template/add-on-product-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-overview/template/add-on-product-overview.html
@@ -1,4 +1,4 @@
-<div class="overview-right-body" *ngIf="addOnProductVM">
+<div class="overview-right-body th-padding-top" *ngIf="addOnProductVM">
 	<div>
 		<img class="img-responsive" [src]="imageUrl" *ngIf="imageUrl" />
 	</div>
