--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-overview/template/customer-register-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-overview/template/customer-register-overview.html
@@ -1,4 +1,4 @@
-<div class="overview-right-body" *ngIf="customerVM">
+<div class="overview-right-body th-padding-top" *ngIf="customerVM">
 	<div>
 		<kbd>{{ 'Selected' | translate }}</kbd>
 	</div>
