--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/beds/template/wizard-beds.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/beds/template/wizard-beds.html
@@ -10,6 +10,4 @@
 	</div>
 </div>
 
-<div class="row card-body">
-	<beds class="col-xs-12" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></beds>
-</div>
+<beds class="row card-body" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></beds>
