--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/price-products/template/wizard-price-products.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/price-products/template/wizard-price-products.html
@@ -12,6 +12,4 @@
 		<h1>{{ _priceProductsStateService.totalNoOfActivePriceProducts }} <span class="unitpal-font">{{ _priceProductsStateService.getMeta().iconFontName }}</span></h1>
 	</div>
 </div>
-<div class="row card-body">
-	<price-products class="col-xs-12" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></price-products>
-</div>
+<price-products class="row card-body" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></price-products>
