--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -31,225 +31,95 @@
 		</div>
 	</div>
 
-	<div>
-		<table class="lazy-loading">
-			<thead>
-				<tr>
-					<th field='Nick'>Nick</th>
-					<th field='Mail'>Mail</th>
-					<th field='Web'>Web</th>
-					<th field='Twitter'>Twitter</th>
-					<th field='Id'>Id</th>
-				</tr>
-			</thead>
-			<tfoot>
-				<tr>
-					<td field='New'>
-						<a class="btn btn-lg" *ngIf="tableOptions.canAdd" (click)="addItem()">
-							<i class="fa fa-plus"></i> {{tableMeta.addButtonText}}
-						</a>
-					</td>
 
-					<td field='Stats'>
-						{{paginationIndex.pageNumberStat}}
-					</td>
-					<td field='Pages'>
-						<ul class="pagination">
-							<li [ngClass]="{disabled: isFirstPage()}">
-								<a (click)="updatePageNumber(paginationIndex.firstPageNumber)">
-									<i class="fa fa-angle-double-left"></i>
-								</a>
-							</li>
-							<li *ngFor="let index of paginationIndex.indexList" [ngClass]="{active: index.isSelected}">
-								<a (click)="updatePageNumber(index.pageNumber)">{{index.displayNumber}}</a>
-							</li>
-							<li [ngClass]="{disabled: isLastPage()}">
-								<a (click)="updatePageNumber(paginationIndex.lastPageNumber)">
-									<i class="fa fa-angle-double-right"></i>
-								</a>
-							</li>
-						</ul>
+	<table class="lazy-loading">
+		<thead>
+			<tr>
+				<th *ngFor="let columnMeta of columnMetaList" [ngClass]="isCollapsed? columnMeta.valueMeta.collapsedStyle : columnMeta.valueMeta.normalStyle">
+					{{ columnMeta.displayName | translate }}
+				</th>
+				<th [ngClass]="{'up-col-10p': !isCollapsed, 'up-col-20p': isCollapsed}">
+				</th>
+			</tr>
 
-					</td>
-				</tr>
-			</tfoot>
-			<tbody>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-				<tr>
-					<td field='Nick'>Fulano</td>
-					<td field='Mail'>Fulano@gmail.com</td>
-					<td field='Web'>fulano.es</td>
-					<td field='Twitter'>@Fulano</td>
-					<td field='Id'>1</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+		</thead>
+		<tfoot>
+			<tr>
+				<td [ngClass]="{'up-col-33p': !isCollapsed, 'up-col-30p': isCollapsed}">
+					<a class="btn btn-lg" *ngIf="tableOptions.canAdd" (click)="addItem()">
+						<i class="fa fa-plus"></i> {{tableMeta.addButtonText}}
+					</a>
+				</td>
+
+				<td [ngClass]="{'up-col-33p': !isCollapsed, 'up-col-0p': isCollapsed}">
+					{{paginationIndex.pageNumberStat}}
+				</td>
+				<td class="right" [ngClass]="{'up-col-33p': !isCollapsed, 'up-col-70p': isCollapsed}">
+					<ul class="pagination">
+						<li [ngClass]="{disabled: isFirstPage()}">
+							<a (click)="updatePageNumber(paginationIndex.firstPageNumber)">
+								<i class="fa fa-angle-double-left"></i>
+							</a>
+						</li>
+						<li *ngFor="let index of paginationIndex.indexList" [ngClass]="{active: index.isSelected}">
+							<a (click)="updatePageNumber(index.pageNumber)">{{index.displayNumber}}</a>
+						</li>
+						<li [ngClass]="{disabled: isLastPage()}">
+							<a (click)="updatePageNumber(paginationIndex.lastPageNumber)">
+								<i class="fa fa-angle-double-right"></i>
+							</a>
+						</li>
+					</ul>
+
+				</td>
+			</tr>
+		</tfoot>
+		<tbody>
+			<tr *ngFor="let item of itemList" [ngClass]="{active: (isSelected(item) && (tableOptions.canSelect || tableOptions.canMultiSelect)  )}">
+				<td *ngFor="let columnMeta of columnMetaList" (click)="(tableOptions.canSelect || tableOptions.canMultiSelect) && didSelectItem(item)"
+					[ngClass]="getCellStyle(columnMeta.valueMeta, isCollapsed)">
+					<span *ngIf="isPercentage(columnMeta.valueMeta)">
+									{{ getItemValue(item, columnMeta.valueMeta) | percentage }}
+								</span>
+					<span *ngIf="isPrice(columnMeta.valueMeta)">
+									{{ getDependentItemValue(item, columnMeta.valueMeta) }}
+									{{ getItemValue(item, columnMeta.valueMeta) | price }}
+								</span>
+					<span *ngIf="isStringOrNumber(columnMeta.valueMeta)">
+									{{ getItemValue(item, columnMeta.valueMeta) | translate }}
+								</span>
+					<span *ngIf="isNotes(columnMeta.valueMeta)">
+									<small>
+										{{ getItemValue(item, columnMeta.valueMeta) | translate }}
+									</small>
+								</span>
+					<span *ngIf="isCapacity(columnMeta.valueMeta)">
+									{{ getItemValue(item, columnMeta.valueMeta).maxAdults }} <span class="unitpal-font">{{columnMeta.valueMeta.fonts.adult}}</span>					{{ getItemValue(item, columnMeta.valueMeta).maxChildren }} <span class="unitpal-font">{{columnMeta.valueMeta.fonts.child}}</span>
+					</span>
+					<span *ngIf="isFontIcon(columnMeta.valueMeta)">
+									<span class="unitpal-font">{{getItemValue(item, columnMeta.valueMeta)}}</span>
+					</span>
+				</td>
+				<td class="table-item-action-group" [ngClass]="{'up-col-10p': !isCollapsed, 'up-col-30p': isCollapsed}">
+					<a class="btn btn-xs" *ngIf="tableOptions.canCopy" (click)="copyItem(item)" title="{{ 'Clone' | translate }}">
+						<i class="fa unitpal-font">[</i>
+					</a>
+					<a class="btn btn-xs" *ngIf="tableOptions.canEdit" (click)="editItem(item)" title="{{ 'Edit' | translate }}">
+						<i class="fa unitpal-font">]</i>
+					</a>
+					<a class="btn btn-xs" *ngIf="tableOptions.canDelete" (click)="deleteItem(item)" title="{{ 'Delete' | translate }}">
+						<i class="fa unitpal-font">\</i>
+					</a>
+				</td>
+			</tr>
+			<tr *ngIf="noResultsExist()">
+				<td class="up-col-100p">
+					<center>
+						{{ 'No items to display' | translate }}
+					</center>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+
 </div>
