--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/rooms/template/wizard-rooms.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/rooms/template/wizard-rooms.html
@@ -9,6 +9,5 @@
 		<h1>{{ _roomsStateService.totalNoOfRooms }} <span class="unitpal-font">{{_roomsStateService.getMeta().iconFontName}}</span></h1>
 	</div>
 </div>
-<div class="row card-body">
-	<rooms class="col-xs-12" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></rooms>
-</div>
+
+<rooms class="row card-body" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></rooms>
